Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27818

Disk plugin does not show zpool mounted devices

    XMLWordPrintable

Details

    Description

      The plugin code wrongly filter devices not starting with a /. A much better solution would be filtering the mount point to enable pool devices to be reported /proc /dev /sys /run /etc can be removed as a monitoring solution should focus only on data & log & tmp directories that would not be mounted in such POSIX listed directory

      Attachments

        Activity

          People

            danblack Daniel Black
            stephane@skysql.com VAROQUI Stephane
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h
                3h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.